--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-npm install express cors dotenv mysql2 nodemailer bcryptjs jsonwebtoken
+{
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0"
+  }
+}
